--- a/WebContent/web/sub/demo1.html
+++ b/WebContent/web/sub/demo1.html
@@ -11,7 +11,7 @@
 </head>
 <body ms-controller="bodyController">
 
-<div id="content" class="mycontainer">
+<div id="content" class="mycontainer" ms-if="showDialog == 'main'">
 	<!-- 标题 -->
 	<div class="mycontainer-title">
 		<span class="mycontainer-title-icon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span>
@@ -54,7 +54,7 @@
 	
 	<!-- 表格操作按钮 -->
 	<div class="mycontainer-button">
-		<input class="btn btn-danger btn-sm" type="button" value="采购入库" />
+		<input class="btn btn-danger btn-sm" type="button" value="采购入库" ms-click="changeDialog('sub')" />
 		<input class="btn btn-default btn-sm" type="button" value="归还入库" />
 	</div>
 	
@@ -64,6 +64,9 @@
 	</div>
 </div>
 
+<div class="dialog-content" ms-if="showDialog == 'sub'">
+	<iframe id="subFrame" src="" frameborder='0' style="width: 100%; height: 100%;"></iframe>
+</div>
 <script type="text/javascript" src="../../plugin/jquery/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="../../plugin/bootstrap/bootstrap-3.3.5.min.js"></script>
 <script type="text/javascript" src="../../plugin/datetimepicker/bootstrap-datetimepicker.min.js"></script>
