--- a/WebContent/web/sub/stock/inStorage.html
+++ b/WebContent/web/sub/stock/inStorage.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>入库管理</title>
-<link rel="stylesheet" href="../../plugin/bootstrap/bootstrap-3.3.5.min.css" />
-<link rel="stylesheet" href="../../plugin/datetimepicker/bootstrap-datetimepicker.min.css" />
-<link rel="stylesheet" href="../../plugin/font-awesome/css/font-awesome.css" />
-<link rel="stylesheet" href="../../plugin/dataTables/theme/dataTables.bootstrap.min.css" />
-<link rel="stylesheet" href="../css/index2.css" />
+<link rel="stylesheet" href="../../../plugin/bootstrap/bootstrap-3.3.5.min.css" />
+<link rel="stylesheet" href="../../../plugin/datetimepicker/bootstrap-datetimepicker.min.css" />
+<link rel="stylesheet" href="../../../plugin/font-awesome/css/font-awesome.css" />
+<link rel="stylesheet" href="../../../plugin/dataTables/theme/dataTables.bootstrap.min.css" />
+<link rel="stylesheet" href="../../css/index2.css" />
 </head>
 <body ms-controller="bodyController">
 
@@ -54,7 +54,7 @@
 	
 	<!-- 表格操作按钮 -->
 	<div class="mycontainer-button">
-		<input class="btn btn-danger btn-sm" type="button" value="采购入库" ms-click="changeDialog('sub')" />
+		<input class="btn btn-danger btn-sm" type="button" value="采购入库" ms-click="changeDialog('purchase')" />
 		<input class="btn btn-default btn-sm" type="button" value="归还入库" />
 	</div>
 	
@@ -67,13 +67,14 @@
 <div class="dialog-content" ms-if="showDialog == 'sub'">
 	<iframe id="subFrame" src="" frameborder='0' style="width: 100%; height: 100%;"></iframe>
 </div>
-<script type="text/javascript" src="../../plugin/jquery/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="../../plugin/bootstrap/bootstrap-3.3.5.min.js"></script>
-<script type="text/javascript" src="../../plugin/datetimepicker/bootstrap-datetimepicker.min.js"></script>
-<script type="text/javascript" src="../../plugin/datetimepicker/locales/bootstrap-datetimepicker.zh-CN.js"></script>
-<script type="text/javascript" src="../../plugin/dataTables/jquery.dataTables-1.10.8.min.js"></script>
-<script type="text/javascript" src="../../plugin/dataTables/dataTables.bootstrap-1.10.8.min.js"></script>
-<script type="text/javascript" src="../../plugin/avalon/avalon.js"></script>
-<script type="text/javascript" src="../js/demo1.js"></script>
+
+<script type="text/javascript" src="../../../plugin/jquery/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="../../../plugin/bootstrap/bootstrap-3.3.5.min.js"></script>
+<script type="text/javascript" src="../../../plugin/datetimepicker/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript" src="../../../plugin/datetimepicker/locales/bootstrap-datetimepicker.zh-CN.js"></script>
+<script type="text/javascript" src="../../../plugin/dataTables/jquery.dataTables-1.10.8.min.js"></script>
+<script type="text/javascript" src="../../../plugin/dataTables/dataTables.bootstrap-1.10.8.min.js"></script>
+<script type="text/javascript" src="../../../plugin/avalon/avalon.js"></script>
+<script type="text/javascript" src="../../js/stock/inStorage.js"></script>
 </body>
 </html>
