--- a/WebContent/web/sub/stock/detailInStorage.html
+++ b/WebContent/web/sub/stock/detailInStorage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>入库管理</title>
+<title>入库明细</title>
 <link rel="stylesheet" href="../../../plugin/bootstrap/bootstrap-3.3.5.min.css" />
 <link rel="stylesheet" href="../../../plugin/datetimepicker/bootstrap-datetimepicker.min.css" />
 <link rel="stylesheet" href="../../../plugin/font-awesome/css/font-awesome.css" />
@@ -11,7 +11,7 @@
 </head>
 <body ms-controller="bodyController">
 
-<div id="content" class="mycontainer" ms-if="showDialog == 'main'">
+<div id="content" class="mycontainer">
 	<!-- 标题 -->
 	<div class="mycontainer-title">
 		<span class="mycontainer-title-icon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span>
@@ -21,11 +21,19 @@
 	<!-- 查询条件 -->
 	<div class="mycontainer-search">
 		<div class="mycontainer-search-row">
-			<span class="search-text">入库单号</span>
+			<span class="search-text width60">入库单号</span>
 			<span class="search-input">
 				<input type="text" class="search-input width200" />
 			</span>
-			<span class="search-text mgl20">入库类型</span>
+			<span class="search-text width60 mgl20">商品名称</span>
+			<span class="search-input">
+				<input type="text" class="search-input width200" />
+			</span>
+			<span class="search-text width60 mgl20">商品编号</span>
+			<span class="search-input">
+				<input type="text" class="search-input width200" />
+			</span>
+			<span class="search-text width60 mgl20">商品类别</span>
 			<span class="search-input">
 				<select class="search-input width200">
 					<option>1</option>
@@ -33,11 +41,21 @@
 					<option>3</option>
 				</select>
 			</span>
-			<span class="search-text mgl20">经手人</span>
+		</div>
+		<div class="mycontainer-search-row">
+			<span class="search-text width60">库区</span>
+			<span class="search-input">
+				<select class="search-input width200">
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+				</select>
+			</span>
+			<span class="search-text width60 mgl20">经手人</span>
 			<span class="search-input">
 				<input type="text" class="search-input width200" />
 			</span>
-			<span class="search-text mgl20">入库时间</span>
+			<span class="search-text width60 mgl20">入库时间</span>
 			<span class="search-input">
 				<input id="time1" type="text" class="search-input width200" />
 			</span>
@@ -54,18 +72,24 @@
 	
 	<!-- 表格操作按钮 -->
 	<div class="mycontainer-button">
-		<input class="btn btn-danger btn-sm" type="button" value="采购入库" ms-click="changeDialog('purchase')" />
-		<input class="btn btn-default btn-sm" type="button" value="归还入库" ms-click="changeDialog('restore')" />
+		<input class="btn btn-danger btn-sm" type="button" value="导出明细" ms-click="exportDetail" />
 	</div>
 	
-	<!-- 表格 -->
-	<div class="mycontainer-table">
-		<table id="tableList" class="table table-striped table-bordered" cellspacing="0" width="100%"></table>
+	<!-- 标签 -->
+	<ul class="nav nav-tabs">
+	  	<li role="presentation" class="active"><a href="#" ms-click="tabClick('table1')">采购入库</a></li>
+	  	<li role="presentation"><a href="#" ms-click="tabClick('table2')">归还入库</a></li>
+	</ul>
+	
+	<!-- 表格1 -->
+	<div class="mycontainer-table" ms-if="showTable == 'table1'">
+		<table id="tableList1" class="table table-striped table-bordered" cellspacing="0" width="100%"></table>
 	</div>
-</div>
-
-<div class="dialog-content" ms-if="showDialog == 'sub'">
-	<iframe id="subFrame" src="" frameborder='0' style="width: 100%; height: 100%;"></iframe>
+	
+	<!-- 表格2 -->
+	<div class="mycontainer-table" ms-if="showTable == 'table2'">
+		<table id="tableList2" class="table table-striped table-bordered" cellspacing="0" width="100%"></table>
+	</div>
 </div>
 
 <script type="text/javascript" src="../../../plugin/jquery/jquery-1.9.1.min.js"></script>
@@ -77,6 +101,6 @@
 <script type="text/javascript" src="../../../plugin/layer/layer.js"></script>
 <script type="text/javascript" src="../../js/common/clds.layer.js"></script>
 <script type="text/javascript" src="../../../plugin/avalon/avalon.js"></script>
-<script type="text/javascript" src="../../js/stock/inStorage.js"></script>
+<script type="text/javascript" src="../../js/stock/detailInStorage.js"></script>
 </body>
 </html>
